deploy-k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: app-acme
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cart-redis
  labels:
    app: acmefit
    service: cart-redis
  namespace: app-acme
spec:
  ports:
  - port: 6379
    name: redis-cart
  selector:
    app: acmefit
    service: cart-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis
  labels:
    app: acmefit
    service: cart-redis
    version: 1.0.0
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: cart-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: cart-redis
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - name: cart-redis
        image: projects.registry.vmware.com/tanzu_meta_pocs/acme/redis:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/redis
          name: cart-redis-data
      volumes:
      - name: cart-redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: acmefit
    service: cart
  namespace: app-acme
spec:
  ports:
  - name: http-cart
    protocol: TCP
    port: 5000
  selector:
    app: acmefit
    service: cart
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    app: acmefit
    service: cart
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: cart
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: cart
        app.kubernetes.io/part-of: acme-fitness
    spec:
      volumes:
      - name: acmefit-cart-data
        emptyDir: {}
      containers:
      - image: harbor.mgt.mytanzu.org/acme/build/cart:v0.1
        imagePullPolicy: Always
        name: cart
        ports:
        - containerPort: 5000
          name: cart
        volumeMounts:
        - mountPath: /data
          name: acmefit-cart-data
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
---
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-mongo
  labels:
    app: acmefit
    service: catalog-db
  namespace: app-acme
spec:
  ports:
  - port: 27017
    name: mongo-catalog
    protocol: TCP
  selector:
    app: acmefit
    service: catalog-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-mongo
  labels:
    app: acmefit
    service: catalog-db
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: catalog-db
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: catalog-db
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - name: catalog-mongo
        image: projects.registry.vmware.com/tanzu_meta_pocs/acme/mongo:4
        resources: {}
        ports:
        - name: catalog-mongo
          containerPort: 27017
          protocol: TCP
        volumeMounts:
        - mountPath: /data/db
          name: mongodata
        - mountPath: /docker-entrypoint-initdb.d
          name: mongo-initdb
      volumes:
      - name: mongodata
        persistentVolumeClaim:
          claimName: mongodata
      - name: mongo-initdb
        configMap:
          name: catalog-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app: acmefit
    service: catalog
  namespace: app-acme
spec:
  ports:
  - name: http-catalog
    protocol: TCP
    port: 8082
  selector:
    app: acmefit
    service: catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  labels:
    app: acmefit
    service: catalog
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: catalog
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: catalog
        app.kubernetes.io/part-of: acme-fitness
    spec:
      volumes:
      - name: acmefit-catalog-data
        emptyDir: {}
      containers:
      - image: harbor.mgt.mytanzu.org/acme/build/catalog:v0.1
        imagePullPolicy: Always
        name: catalog
        ports:
        - containerPort: 8082
          name: catalog
        volumeMounts:
        - mountPath: /data
          name: acmefit-catalog-data
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: acmefit
    service: payment
  namespace: app-acme
spec:
  ports:
  - name: http-payment
    protocol: TCP
    port: 9000
  selector:
    app: acmefit
    service: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: acmefit
    service: payment
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: payment
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: payment
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - image: harbor.mgt.mytanzu.org/acme/build/payment:v0.1
        name: payment
        ports:
        - containerPort: 9000
          name: payment
---
apiVersion: v1
kind: Service
metadata:
  name: order-postgres
  labels:
    app: acmefit
    service: order-db
  namespace: app-acme
spec:
  ports:
  - port: 5432
    name: postgres-order
    protocol: TCP
  selector:
    app: acmefit
    service: order-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-postgres
  labels:
    app: acmefit
    service: order-db
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: order-db
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: order-db
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - name: postgres
        image: projects.registry.vmware.com/tanzu_meta_pocs/acme/postgres:9.5
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
          name: order-postgres
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgredb
      volumes:
      - name: postgredb
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: acmefit
    service: order
  namespace: app-acme
spec:
  ports:
  - name: http-order
    protocol: TCP
    port: 6000
  selector:
    app: acmefit
    service: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: acmefit
    service: order
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: order
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: order
        app.kubernetes.io/part-of: acme-fitness
    spec:
      volumes:
      - name: acmefit-order-data
        emptyDir: {}
      containers:
      - image: harbor.mgt.mytanzu.org/acme/build/order:v0.1
        name: order
        ports:
        - containerPort: 6000
          name: order
        volumeMounts:
        - mountPath: /data
          name: acmefit-order-data
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: users-mongo
  labels:
    app: acmefit
    service: users-mongo
  namespace: app-acme
spec:
  ports:
  - port: 27017
    name: mongo-users
    protocol: TCP
  selector:
    app: acmefit
    service: users-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mongo
  labels:
    app: acmefit
    service: users-mongo
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: users-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: users-mongo
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - name: users-mongo
        image: projects.registry.vmware.com/tanzu_meta_pocs/acme/mongo:4
        resources: {}
        ports:
        - name: users-mongo
          containerPort: 27017
          protocol: TCP
        volumeMounts:
        - mountPath: /data/db
          name: mongodata
        - mountPath: /docker-entrypoint-initdb.d
          name: mongo-initdb
      volumes:
      - name: mongodata
        emptyDir: {}
      - name: mongo-initdb
        configMap:
          name: users-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  name: users-redis
  labels:
    app: acmefit
    service: users-redis
  namespace: app-acme
spec:
  ports:
  - port: 6379
    name: redis-users
  selector:
    app: acmefit
    service: users-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-redis
  labels:
    app: acmefit
    service: users-redis
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: users-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: users-redis
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - name: users-redis
        image: projects.registry.vmware.com/tanzu_meta_pocs/acme/redis:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/redis
          name: users-redis-data
      volumes:
      - name: users-redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: acmefit
    service: users
  namespace: app-acme
spec:
  ports:
  - name: http-users
    protocol: TCP
    port: 8083
  selector:
    app: acmefit
    service: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: acmefit
    service: users
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: users
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: users
        app.kubernetes.io/part-of: acme-fitness
    spec:
      volumes:
      - name: acmefit-users-data
        emptyDir: {}
      containers:
      - image: harbor.mgt.mytanzu.org/acme/build/user:v0.1
        imagePullPolicy: Always
        name: users
        ports:
        - containerPort: 8083
          name: users
        volumeMounts:
        - mountPath: /data
          name: acmefit-users-data
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
---
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
  namespace: app-acme
spec:
  ports:
  - name: http-frontend
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: acmefit
    service: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
  namespace: app-acme
spec:
  selector:
    matchLabels:
      app: acmefit
      service: frontend
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: frontend
        app.kubernetes.io/part-of: acme-fitness
    spec:
      containers:
      - image: harbor.mgt.mytanzu.org/acme/build/frontend:v0.1
        name: frontend
        ports:
        - containerPort: 3000
          name: http-shopping
---
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: acme
  namespace: app-acme
spec:
  routes:
  - services:
    - name: frontend
      port: 80
  virtualhost:
    fqdn: app-acme.mgt.mytanzu.org
